Remove fixed height from Sign component styles and add overflow property for better layout handling

--- a/src/pages/Sign/style.scss
+++ b/src/pages/Sign/style.scss
@@ -280,12 +280,9 @@ form {
         overflow-x: hidden;
 
         @media (max-width:768px) {
+            overflow: hidden;
             height: auto;
 
-        }
-
-        @include screenHeight(600px) {
-            height: 300px;
         }
 
         h4 {
